web/assets/scss/components/_nav.scss
// Main Site Navigation

.site-nav {
  @include hardware-acceleration;
  background: $white;
  transition: transform 0.2s $ease;

  position: fixed;
  z-index: 100;
  top: 0;
  right: 0;
  bottom: 0;
  left: 80px;
  width: calc(100% - 80px);
  padding: $beat*4 $padding;

  // 320–480px get smaller left gap
  @include max-screen($breakpoint-sm) {
    left: 60px;
    width: calc(100% - 60px);
  }

  @include media-md {
    position: relative;
    top: auto;
    right: auto;
    bottom: auto;
    left: auto;
    padding: 0;
    width: auto;
    float: right;
    transition: none;
    text-align: right;
  }

  .primary-links {
    @include font-nav;
    @include font-smoothing;

    @include media-md {
      text-align: right;
    }

    @include screen($breakpoint-sm, $breakpoint-md) {
      // Larger font on 480–960px
      @include paragraph-style (33, 40, $ls: -.025em);
      li {
        margin-bottom: $beat;
      }
    }

    li {
      color: $black;
      position: relative;

      a {
        display: block;
        text-decoration: none;
      }

      &.current a,
      a:hover {
        color: $red;
      }
      &.current a {
        &::after {
          right: 0;
          top: 12px;
          content: '';
          width: 27px;
          height: 24px;
          position: absolute;
          background: url('../svgs/icon-right-arrow-red.svg') no-repeat;
          background-size: contain;
        }
      }

      @include media-md {
        display: inline-block;
        a {
          padding: $beat $beat*2;
          &::after {
            display: none;
          }
        }
      }
    }
  }
}

.secondary-links {
  @include font-buttons;
  @include semantic-only-list;

  li {
    display: block;
    text-align: right;
    a {
      display: inline-block;
      text-decoration: none;
    }
    &.current a,
    a:hover {
      text-decoration: underline;
    }
  }

  // Smaller screens
  @include max-screen($breakpoint-sm) {
    width: calc(100% - 60px);
    li a {
      padding: $beat 0;
    }
  }

  @include screen($breakpoint-sm, $breakpoint-md) {
    // Larger font size on 480–960px
    li {
      @include font-filter;
    }
  }

  // Mobile-only styles
  @include max-screen($breakpoint-md) {
    position: absolute;
    bottom: $padding;
    left: $padding;
    width: calc(100% - 80px);
    li {
      text-align: left;
      &.search-open {
        position: absolute;
        right: 0;
        bottom: 0;
        padding: 0;
      }
    }
  }

  @include media-md {
    li {
      display: inline-block;
      margin-left: 3ch; // '¯\_(ツ)_/¯'
    }
  }
}

.nav-close {
  @include hardware-acceleration;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 99;
  position: fixed;
  cursor: pointer;
  transition: opacity 0.2s $ease;
  background-color: rgba($black,0.75);

  @include media-md {
    display: none;
  }

  .icon-x {
    top: $padding;
    left: $padding-sm;
    width: 18px;
    height: 18px;
    position: absolute;
    fill: $white;

    // 320–480px get smaller left gap
    @include max-screen($breakpoint-sm) {
      left: 20px;
    }
  }
}

.nav-open {
  @include hardware-acceleration;
  width: $padding;
  cursor: pointer;
  top: 48px;
  right: $padding-sm;
  position: absolute;

  // 320–480px get smaller nav + left gap
  @include max-screen($breakpoint-sm) {
    top: 32px;
  }

  @include media-md {
    display: none;
  }

  .icon-hamburger {
    width: 24px;
    height: 16px;
    fill: $black;
  }
}

@include max-screen($breakpoint-md - 1px) {
   body.site-nav-closed,
   body:not(.loaded) {
    .site-nav {
      transform: translateX(100%);
    }
    .nav-close {
      opacity: 0;
      pointer-events: none;
    }
    // .current-filter-label,
    .nav-open .icon-hamburger {
      opacity: 1;
      transition: 0.2s 0.3s $ease;
    }
    .nav-content {
      opacity: 0;
      transition: opacity 0.2s $ease;
    }
  }

  body.site-nav-open {
    overflow: hidden; // prevent scrolling in body when nav is open

    // .current-filter-label,
    .nav-open .icon-hamburger {
      opacity: 0;
      transition: 0.1s $ease;
    }
  }
}

